etc/sysconfig/iptables
# Generated by iptables-save v1.4.21 on Tue Jun 16 11:01:44 2020
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1257:347523]
:ICMPFLOOD - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -s 127.0.0.0/8 ! -i lo -j DROP
-A INPUT -m addrtype --dst-type BROADCAST -j DROP
-A INPUT -m addrtype --dst-type MULTICAST -j DROP
-A INPUT -m addrtype --dst-type ANYCAST -j DROP
-A INPUT -d 224.0.0.0/4 -j DROP
-A INPUT -p udp -m udp --dport 5060 -m string --string "friendly-scanner" --algo bm --to 65535 -j REJECT --reject-with icmp-host-unreachable
-A INPUT -p udp -m udp --dport 5060 -m string --string "sipvicious" --algo bm --to 65535 -j REJECT --reject-with icmp-host-unreachable
-A INPUT -p udp -m udp --dport 5060 -m string --string "sipcli/" --algo bm --to 65535 -j REJECT --reject-with icmp-host-unreachable
-A INPUT -p icmp -m icmp --icmp-type 0 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ICMPFLOOD
-A INPUT -p udp -m multiport --dports 135,445 -j DROP
-A INPUT -p udp -m udp --dport 137:139 -j DROP
-A INPUT -p udp -m udp --sport 137 --dport 1024:65535 -j DROP
-A INPUT -p tcp -m multiport --dports 135,139,445 -j DROP
-A INPUT -p udp -m udp --dport 1900 -j DROP
-A INPUT -p udp -m udp --sport 53 -j DROP
-A INPUT -p tcp -m tcp --dport 113 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j REJECT --reject-with tcp-reset
-A INPUT -s 163.172.0.0/16 -m conntrack --ctstate NEW -j DROP
-A INPUT -s 10.0.0.0/8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 172.28.0.0/24 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 79.133.69.48/28 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 212.45.19.160/29 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 192.168.0.0/16 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 172.16.0.0/16 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m multiport --dports 69,53,123,5060,10000:20000,4000:4999 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5060 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 5038 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 5038 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 212.188.45.222/32 -p tcp -m multiport --dports 80,3306,443,10050 -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 80.237.110.144/29 -p tcp -m multiport --dports 80,3306,443 -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 80.237.110.130/32 -p tcp -m multiport --dports 80,3306,443 -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 94.100.192.29/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 213.108.248.178/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 83.143.51.50/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 77.37.134.150/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 78.140.251.2/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 89.175.20.7/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 85.30.248.246/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 195.91.239.8/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 82.199.107.209/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 77.41.47.203/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 85.21.78.23/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 91.207.136.55/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 88.212.196.95/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 195.3.254.2/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 213.141.154.170/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 192.36.143.130/32 -p udp -m udp --dport 123 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -s 89.39.104.120/32 -m conntrack --ctstate NEW -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -d 0.0.0.0/8 -j DROP
-A FORWARD -d 127.0.0.0/8 -j DROP
-A FORWARD -d 255.255.255.255/32 -j DROP
-A FORWARD -d 224.0.0.0/4 -j DROP
-A FORWARD -d 240.0.0.0/5 -j DROP
-A FORWARD -d 239.255.255.0/24 -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A FORWARD -p icmp -m icmp --icmp-type 17 -j DROP
-A FORWARD -p icmp -m icmp --icmp-type 13 -j DROP
-A FORWARD -p icmp -f -j DROP
-A ICMPFLOOD -m recent --set --name ICMP --mask 255.255.255.255 --rsource
-A ICMPFLOOD -m recent --update --seconds 1 --hitcount 6 --rttl --name ICMP --mask 255.255.255.255 --rsource -m limit --limit 1/sec --limit-burst 1 -j LOG --log-prefix "iptables[ICMP-flood]: "
-A ICMPFLOOD -m recent --update --seconds 1 --hitcount 6 --rttl --name ICMP --mask 255.255.255.255 --rsource -j DROP
-A ICMPFLOOD -j ACCEPT
COMMIT
# Completed on Tue Jun 16 11:01:44 2020
# Generated by iptables-save v1.4.21 on Tue Jun 16 11:01:44 2020
*mangle
:PREROUTING ACCEPT [1359:241033]
:INPUT ACCEPT [1329:231100]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1257:347523]
:POSTROUTING ACCEPT [1257:347523]
COMMIT
# Completed on Tue Jun 16 11:01:44 2020
